<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/fruitListFragment">

    <fragment
        android:id="@+id/fruitListFragment"
        android:name="com.example.fruitapp.presentation.feature.FruitListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_fruit_list">
        <action
            android:id="@+id/action_fruitListFragment_to_fruitDetailFragment"
            app:destination="@id/fruitDetailFragment"/>
        <action
            android:id="@+id/action_fruitListFragment_to_addFruitFragment"
            app:destination="@id/addFruitFragment"/>
    </fragment>
    <fragment
        android:id="@+id/fruitDetailFragment"
        android:name="com.example.fruitapp.presentation.feature.FruitDetailFragment"
        android:label="@string/fruit_detail_fragment_title"
        tools:layout="@layout/fragment_fruit_detail">
        <argument
            android:name="fruit_id"
            app:argType="integer"/>
    </fragment>
    <fragment
        android:id="@+id/addFruitFragment"
        android:name="com.example.fruitapp.presentation.feature.AddFruitFragment"
        android:label="@string/add_fruit_fragment_title"
        tools:layout="@layout/fragment_add_fruit">
        <action
            android:id="@+id/action_addFruitFragment_to_fruitListFragment"
            app:destination="@id/fruitListFragment"
            app:popUpTo="@id/fruitListFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>