<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fruitapp.presentation.feature.FruitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".presentation.feature.FruitDetailFragment">

        <include
            layout="@layout/fruit_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fruit="@{viewModel.selectedFruit}" />

        <LinearLayout
            android:id="@+id/nutrition_linearLayout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fruit_item">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp"
                    app:cardBackgroundColor="@color/cardView">

                    <TextView
                        android:id="@+id/fruit_calories_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:intToString="@{viewModel.selectedFruit.calories}"
                        tools:text="@string/test_number"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calories_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp"
                    app:cardBackgroundColor="@color/cardView">

                    <TextView
                        android:id="@+id/fruit_proteins_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:doubleToString="@{viewModel.selectedFruit.protein}"
                        tools:text="@string/test_number"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/protein_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp"
                    app:cardBackgroundColor="@color/cardView">

                    <TextView
                        android:id="@+id/fruit_carbohydrates_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:doubleToString="@{viewModel.selectedFruit.carbohydrates}"
                        tools:text="@string/test_number"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/carbohydrates_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nutrition_linearLayout_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_linearLayout_1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp"
                    app:cardBackgroundColor="@color/cardView">

                    <TextView
                        android:id="@+id/fruit_fat_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:doubleToString="@{viewModel.selectedFruit.fat}"
                        tools:text="@string/test_number"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fat_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp"
                    app:cardBackgroundColor="@color/cardView">

                    <TextView
                        android:id="@+id/fruit_sugar_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:doubleToString="@{viewModel.selectedFruit.sugar}"
                        tools:text="@string/test_number"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sugar_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>